--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon Links -->
+    <link rel="icon" href="assets/webicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/webicon.png" type="image/png">
+    <!-- For Apple Devices -->
+    <link rel="apple-touch-icon" href="assets/webicon.png">
     <title>Secure Logout - Download</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
